fixed textarea alignment

--- a/src/sass/chat_interface.scss
+++ b/src/sass/chat_interface.scss
@@ -68,6 +68,7 @@
 
       .message-input {
         display: flex;
+        align-items: center;
         padding: 0.5em 0.5em 0.5em 1em;
         border-radius: 12px;
         background-color: $input-gray;
@@ -81,7 +82,7 @@
         .textarea-width {
           position: absolute;
           inset: auto auto 0 0;
-          min-height: 33px;
+          min-height: 25.59px;
           overflow: hidden;
           overflow-wrap: break-word;
           z-index: -1;
@@ -96,7 +97,7 @@
           background-color: transparent;
           color: $font-gray-100;
           resize: none;
-          height: 33px;
+          height: 25.59px;
           display: grid;
 
           &::placeholder {
